# dach-mcp-server

./: .dockerignore  .env.example  Deployment_Anleitung_Sicherheitsberater.md  Dockerfile  README.md  docker-compose.yml  openwebui-system-prompt.md  pyproject.toml
coolify/: dach-webui-docker-compose.yml
src/: server.py
src/tools/: documents.py  media.py
templates/: gefaehrdungsbeurteilung.json
